提取公共css/less文件

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-sacle=1.0, user-scalable=no">
     <title>vuex-demo</title>
     <script src="./src/assets/script/util/remUtil.js"></script>
-
+    <link rel="stylesheet" href="/dist/build.css">
   </head>
   <body>
     <div id="app"></div>
